2009-11-05  Jeff Schiller  <codedread@gmail.com>

Reviewed by Simon Fraser.

        Added test to ensure proper order of matrix multiplication with SVGMatrix.
        https://bugs.webkit.org/show_bug.cgi?id=16062

        * svg/dom/SVGMatrix-interface-expected.txt: Added.
        * svg/dom/SVGMatrix-interface.xhtml: Added.
2009-11-05  Jeff Schiller  <codedread@gmail.com>

        Reviewed by Simon Fraser.

        Correct order of matrix multiplication for SVGMatrix.
        https://bugs.webkit.org/show_bug.cgi?id=16062

        Test: svg/dom/SVGMatrix-interface.xhtml

        * bindings/js/JSSVGMatrixCustom.cpp:
        (WebCore::JSSVGMatrix::multiply):
        * svg/SVGMatrix.idl:

Canonical link: https://commits.webkit.org/41991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50561 268f45cc-cd09-0410-ab3c-d52691b4dbfc